--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             display: flex; /* Usar flexbox para centrar el contenido */
             align-items: center; /* Centrar verticalmente */
             justify-content: center; /* Centrar horizontalmente */
+            font-size: 20px; /* Tamaño de letra para preguntas */
         }
         .answer {
             background-color: blue; /* Color de fondo para respuestas */
@@ -53,6 +54,7 @@
             display: flex; /* Usar flexbox para centrar el contenido */
             align-items: center; /* Centrar verticalmente */
             justify-content: center; /* Centrar horizontalmente */
+            font-size: 16px; /* Tamaño de letra para respuestas */
         }
         .carousel {
             display: flex; /* Usar flexbox para el carrusel */
@@ -205,13 +207,13 @@
                 <h4>17. ¿Qué es una sociedad anónima mixta?</h4>
             </div>
             <div class="card answer">
-                <p>Una sociedad anónima mixta son entes societarios constituidos con aportes particulares y estatales se regirán por el derecho privado salvo los casos indicados por la ley. El estado debe tener mínimamente el 51% de las acciones, si tiene menos se convierte en sociedad privada.</p>
+                <p>Una sociedad anónima mixta son entes societarios constituidos con aportes particulares y estatales se regirán por el derecho privado salvo los casos indicados por la ley. El estado debe tener mínimamente el 51% de las acciones, si tiene menos se convierte en soc. privada.</p>
             </div>
             <div class="card question">
-                <h4>18. ¿Qué es una administración contingencial?</h4>
+                <h4>18. ¿Qué es una administración contingencial y cuándo se da?</h4>
             </div>
             <div class="card answer">
-                <p>Pone énfasis en el ambiente. El enfoque de la organización es variable dependiendo del ambiente y la tecnología. No hay nada absoluto, todo es relativo donde las variables ambientales son independientes y las técnicas administrativas dependientes.</p>
+                <p>Pone énfasis en el ambiente. El enfoque de la organización es variable dependiendo del ambiente y la tecnología. No hay nada absoluto todo es relativo donde las variables ambientales son independientes y las técnicas administrativas dependientes.</p>
             </div>
             <div class="card question">
                 <h4>19. ¿Cuál es el objeto de la administración?</h4>
@@ -374,6 +376,9 @@
         <button class="carousel-button next" onclick="moveSlide(1)">&#10095;</button>
     </div>
 </div>
+
+<elevenlabs-convai agent-id="MtYG2gpoiMDrx3bZ3va6"></elevenlabs-convai>
+<script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
 
 <script>
     let currentIndex = 0; // Índice actual del carrusel
