--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrusel de Cuestionario</title>
+    <title>Carrusel de Cuestionario Interactivo</title>
     <style>
         body {
             font-family: 'Courier New', Courier, monospace; /* Fuente general del cuerpo */
@@ -376,9 +376,6 @@
         <button class="carousel-button next" onclick="moveSlide(1)">&#10095;</button>
     </div>
 </div>
-
-<elevenlabs-convai agent-id="MtYG2gpoiMDrx3bZ3va6"></elevenlabs-convai>
-<script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
 
 <script>
     let currentIndex = 0; // Índice actual del carrusel
